--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravel/laravel",
+    "name": "zk/laravel-web-app",
     "type": "project",
     "description": "ZK Laravel Web Application",
     "keywords": [
